<resources>
    <string name="app_name">Расчёт по формуле</string>
    <string name="desc_button_icon">Определить геолокацию</string>
    <string name="desc_button_hand_icon">Ввести координаты вручную</string>
    <string name="x_coord">X\n(необходим ввод)</string>
    <string name="y_coord">Y\n(необходим ввод)</string>
    <string name="variable">Вмрлс</string>
    <string name="calculate">Рассчитать</string>
    <string name="tableX">X</string>
    <string name="tableY">Y</string>
    <string name="tableVar">Число</string>
    <string name="table_priznak">Признак</string>
    <string name="table3">∑ контур</string>
    <string name="tablebdu10">БДУ х10</string>
    <string name="tablebdu1">БДУ х1</string>
    <string name="tabledu10">ДУ х10</string>
    <string name="tabledu1">ДУ х1</string>
    <string name="gps_process">Идёт получение координат по GPS и пересчёт их в систему СК-42...</string>
    <string name="gps_title">GPS\n(ПСУ)</string>
    <string name="hand_title">Вручную</string>
    <string name="gps2_title">GPS\n(репер)</string>
    <string name="pos">ПСУ</string>
    <string name="geo">ОГЗ</string>
    <string name="p">Pепер</string>
    <string name="scale">Масштаб: 1.0x</string>
    <string name="default_rap">Основной</string>
    <string name="title_vvod">Значения координат:</string>
    <string name="home_text">Домашняя\nстраница</string>
    <string name="clear_text">Очистить</string>
    <string name="timeout_title">Не всегда удаётся получить координаты GPS быстро. Бывают случаи, когда GPS попросту не работает. Установите время, после которого приложение остановит попытки поймать сигнал во избежания возникновения бесконечной загрузки:</string>
    <string name="checkbox_text">Подгружать значения из предыдущего расчёта при входе в приложение</string>
    <string name="r5">Репер №5</string>
    <string name="r6">Репер №6</string>
    <string name="r62">Репер №6 с реперной точкой</string>
    <string name="r7">Репер №7</string>
    <string name="back_text">Назад</string>
    <string name="timeout">Время\nожидания</string>
    <string name="undefined">Beta мрлс\n (Необходим расчёт)</string>
    <string name="dot">Реперная точка (нажмите чтобы рассчитать)</string>
    <string name="title_rap">Что необходимо рассчитать?</string>
</resources>