<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/timeout_dialog"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/coord_field"
        android:orientation="vertical"
        android:padding="30dp"
        android:translationZ="10dp"
        android:visibility="gone">

        <!-- Заголовок большой -->
        <TextView
            android:id="@+id/title_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Время ожидания сигнала GPS"
            android:textColor="@color/khaki_light"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Заголовок маленький -->
        <TextView
            android:id="@+id/title_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/timeout_title"
            android:textColor="@color/khaki_accent"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/title_large"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Слайдер -->
        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/title_small"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Кнопка "Сохранить" -->
        <Button
            android:id="@+id/savetimeout"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="Сохранить"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/khaki_dark_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="16dp">



        <!-- Buttons -->

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="6dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:layout_marginStart="8dp"
                android:layout_marginEnd="13dp">

                <TextView
                    android:text="@string/home_text"
                    android:textColor="@color/khaki_text_primary"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="48dp"/>

                <ImageButton
                    android:padding="6dp"
                    android:id="@+id/home_button"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/gps_button"
                    android:src="@drawable/home"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/desc_button_icon" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:text="@string/gps_title"
                    android:textColor="@color/khaki_text_primary"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:layout_height="48dp"
                    android:layout_width="wrap_content"/>

                <ImageButton
                    android:padding="10dp"
                    android:id="@+id/gps_button"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/gps_button"
                    android:src="@drawable/gps"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/desc_button_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gps2l"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:gravity="center"
                android:layout_marginTop="-16dp"
                android:layout_marginStart="16dp">

                <TextView
                    android:text="@string/gps2_title"
                    android:textColor="@color/khaki_text_primary"
                    android:gravity="center"
                    android:layout_height="48dp"
                    android:layout_width="80dp"/>

                <ImageButton
                    android:padding="10dp"
                    android:id="@+id/gps2_button"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/gps_button"
                    android:src="@drawable/gps2"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/desc_button_hand_icon" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="8dp">

                <TextView
                    android:text="@string/clear_text"
                    android:textColor="@color/khaki_text_primary"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:layout_height="48dp"
                    android:layout_width="wrap_content"/>

                <ImageButton
                    android:padding="6dp"
                    android:id="@+id/clear_button"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/gps_button"
                    android:src="@drawable/clear"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/clear_text" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:layout_marginStart="8dp"
                android:layout_marginEnd="13dp">

                <TextView
                    android:text="@string/timeout"
                    android:textColor="@color/khaki_text_primary"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:layout_width="wrap_content" android:layout_height="48dp"/>

                <ImageButton
                    android:padding="12dp"
                    android:id="@+id/timeout_button"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/gps_button"
                    android:src="@drawable/clock"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/desc_button_icon" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:background="@drawable/title"
            android:textColor="@color/khaki_dark_bg"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/khaki_text_primary"
            android:layout_gravity="center"
            android:text="@string/title_vvod"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-5dp"
            android:layout_marginStart="60dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="X"
                android:textColor="@color/colorOnSecondaryKhaki"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Y"
                android:textColor="@color/colorOnSecondaryKhaki"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="@color/colorOnSecondaryKhaki"/>
        </LinearLayout>
        <!-- Coordinates Input -->
        <LinearLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp">
            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/pos"
                android:padding="1dp"
                android:textSize="13sp"
                android:textColor="@color/colorOnSecondaryKhaki" />
            <EditText
                android:id="@+id/x"
                android:inputType="numberSigned"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColorHint="@color/khaki_input"
                android:gravity="center"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@drawable/coord_field"
                android:textColor="@color/khaki_text_primary" />

            <EditText
                android:id="@+id/y"
                android:inputType="numberSigned"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColorHint="@color/khaki_input"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="7dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:background="@drawable/coord_field"
                android:textColor="@color/khaki_text_primary" />
          />




            <EditText
                android:visibility="visible"
                android:id="@+id/edit_var"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/input_button"
                android:hint="@string/variable"
                android:inputType="numberSigned"
                android:padding="8dp"
                android:textColor="@color/khaki_text_primary"
                android:textColorHint="@color/khaki_text_secondary" />



        </LinearLayout>
        <Button
            android:id="@+id/calx_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textColor="@color/khaki_text_primary"
            android:background="@color/khaki_secondary"
            android:padding="12dp"
            android:layout_gravity="center"
            android:layout_marginStart="12dp" />


        <!-- Khaki Table -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TableLayout
                android:id="@+id/khaki_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:background="@color/khaki_dark_bg"
                android:paddingTop="10dp">

                <TableRow android:background="@color/black">
                    <TextView android:text=""  android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:text="@string/table_priznak" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:text="@string/tablebdu10" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:text="@string/tablebdu1" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:text="@string/tabledu10" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:text="@string/tabledu1" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:text="@string/table3" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                </TableRow>

                <TableRow android:background="@color/black">
                    <TextView android:text="X" style="@style/TableCellBook" android:background="@drawable/table_cell_border"/>
                    <TextView android:id="@+id/f00" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f01" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f02" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f03" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f04" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f05" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                </TableRow>

                <TableRow android:background="@color/black">
                    <TextView  android:background="@drawable/table_cell_border" android:text="Y" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f10" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f11" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f12" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f13" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f14" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f15" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                </TableRow>

                <TableRow android:background="@color/black">
                    <TextView android:background="@drawable/table_cell_border" android:text="B" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f20" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f21" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f22" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f23" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f24" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                    <TextView android:id="@+id/f25" android:text="" android:background="@drawable/table_cell_border" style="@style/TableCellBook"/>
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>

</LinearLayout>
</ScrollView>
</FrameLayout>